# nio-generelt

./: Cargo.toml
0203/finale/: axis_of_evil.rs  spesielle_tall.rs
0304/finale/: alpinanlegg.rs  paaskekrimmen.rs  tunnelprosjektet.rs
1213/runde2/: gjetteleken.py  hyperion.py
1314/runde2/: brodering.py  byggmester.py  byggmester.rs  byggmester_without_dataclasses.py
1819/finale/: erdos_indexes.rs  erdos_rc.rs
1920/runde2/: regnskap.py  unike_tall.cpp  warpzone.cpp  warpzone.py  warpzone_full.py
