[package]
name = "nio-generelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "alpinanlegg"
path = "0304/finale/alpinanlegg.rs"

[[bin]]
name = "paaskekrimmen"
path = "0304/finale/paaskekrimmen.rs"

[dependencies]
